objects/TracHier__User_Usage_Metrics__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Usage metrics collected by Traction Hierarchies per user.</description>
    <fields>
        <fullName>TracHier__Hierarchy_Click_Count__c</fullName>
        <description>Count of clicks on hierarchy in current org.</description>
        <label>Hierarchy Click Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracHier__Hierarchy_Scroll_Count__c</fullName>
        <description>Count of scrolls on hierarchy in current org.</description>
        <label>Hierarchy Scroll Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracHier__UserId__c</fullName>
        <label>User Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>User Usage Metrics</label>
</CustomObject>